--- a/ex001/index.html
+++ b/ex001/index.html
@@ -19,6 +19,8 @@
     <p>Já me livrei da maldição</p>
     <script>
         window.alert('Minha primeira mensagem!')
+        window.confirm('ok?')
+        window.prompt('Qual seu nome?')
     </script>
 </body>
 </html>
