--- a/ex004/index.html
+++ b/ex004/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EX004</title>
 </head>
 <body>
     
+    <script>
+        var nome = window.prompt('Qual seu nome?')
+        document.write(`Olá, ${nome}!Seu nome tem ${nome.lenght} letras.`)
+    </script>
 </body>
 </html>
