--- a/ex005/index.html
+++ b/ex005/index.html
@@ -16,9 +16,19 @@
 <body>
     <h1>Iniciando estudos DOM</h1>
     <p>Aqui vai o resultado</p>
-    <p>Aprendendo a uusar o <strong>DOM</strong> em JavaScript</p>
-    <div>
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
+    <div id="msg">
         clique em mim
     </div>
+    <script>
+        var corpo = window.document.body
+        var p1 = window.document.getElementsByTagName('p')[1]
+        // var d = window.document.getElementById('msg')
+        // window.document.write('Está escrito assim: ' + p1.innerHTML)
+        // d.style.background = 'Blue'
+        // d.innerText = 'Estou aguardando...'
+        var d = window.document.querySelector('div#msg')
+        d.style.color = 'Blue'
+    </script>
 </body>
 </html>
