--- a/aula12ex/ex014/modelo.html
+++ b/aula12ex/ex014/modelo.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Modelo de Exercício</title>
+    <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
-            testando...
+        <div id="msg">
+            aqui vai aparecer a mensagem...
         </div>
-        <div>
-
+        <div id="img">
+            <img id="imagem" src="/aula12ex/ex014/imagens/manha.png" alt="foto manhã">
         </div>
     </section>
     <footer>
