--- a/ex017/index.html
+++ b/ex017/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Modelo</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-
+            <p>
+            Número:
+            <input type="number" name="txtnum" id="txtnum">
+            <input type="button" value="GERAR TABUADA" onclick="gerar()">
+            </p>
         </div>
         <div>
-            
+            <iframe src="tabuada.html" frameborder="0"></iframe>
         </div>
     </section>
     <footer>
