--- a/ex016/index.html
+++ b/ex016/index.html
@@ -12,7 +12,7 @@
         <h1>Vamos contar</h1>
     </header>
     <section>
-        <div>
+        <div id="dados">
             <p>
                 Início: <input type="number" name="tini" id="tini">
             </p>
@@ -35,4 +35,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
