--- a/ex017/index.html
+++ b/ex017/index.html
@@ -15,12 +15,14 @@
         <div>
             <p>
             Número:
-            <input type="number" name="txtnum" id="txtnum">
+            <input type="number" name="num" id="txtn">
             <input type="button" value="GERAR TABUADA" onclick="gerar()">
             </p>
         </div>
         <div>
-            <iframe src="tabuada.html" frameborder="0"></iframe>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
