--- a/desafio01/index.html
+++ b/desafio01/index.html
@@ -14,7 +14,7 @@
         function enter(){
             var país = window.document.getElementById('txtp')
             var tes = String(txtp.value)
-            if(país == 'BRASIL'){
+            if(tes == 'Brasil'){
                 res.innerText = 'Você é brasileiro!'
             } else {
                 res.innerText = 'Você é estrangeiro!'
